--- a/index.html
+++ b/index.html
@@ -4,9 +4,22 @@
   <meta charset="utf-8">
   <title>JavaScript Basics</title>
   <style>
+    .my-color {
+      color: red;
+      background: skyblue;
+    }
+
+    .my-border {
+      border-bottom: 4px solid orange;
+    }
   </style>
 </head>
 <body>
+  <input type="text">
+  <button>Add</button>
+  
+  <ul>
+  </ul>
 
   <script src="js/main.js"></script>
 </body>
