--- a/index.html
+++ b/index.html
@@ -15,9 +15,13 @@
   </style>
 </head>
 <body>
-  <input type="text">
+  <select>
+    <option>赤</option>
+    <option>青</option>
+    <option>黄</option>
+  </select>
   <button>Add</button>
-  
+
   <ul>
   </ul>
 
