--- a/index.html
+++ b/index.html
@@ -15,13 +15,7 @@
   </style>
 </head>
 <body>
-  <input type="checkbox" value="red"> 赤
-  <input type="checkbox" value="blue"> 青
-  <input type="checkbox" value="yellow"> 黄
-  <button>Add</button>
-
-  <ul>
-  </ul>
+  <textarea></textarea>
 
   <script src="js/main.js"></script>
 </body>
