--- a/index.html
+++ b/index.html
@@ -4,21 +4,20 @@
   <meta charset="utf-8">
   <title>JavaScript Basics</title>
   <style>
-    .my-color {
-      color: red;
-      background: skyblue;
+    li {
+      cursor: pointer;
     }
-
-    .my-border {
-      border-bottom: 4px solid orange;
+    li.done {
+      text-decoration: line-through;
     }
   </style>
 </head>
 <body>
-  <form>
-    <input type="text">
-    <button>Post</button>
-  </form>
+  <ul>
+    <li>Todo</li>
+    <li>Todo</li>
+    <li>Todo</li>
+  </ul>
 
   <script src="js/main.js"></script>
 </body>
