--- a/index.html
+++ b/index.html
@@ -2,23 +2,11 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>JavaScript Basics</title>
-  <style>
-    li {
-      cursor: pointer;
-    }
-    li.done {
-      text-decoration: line-through;
-    }
-  </style>
+  <title>おみくじ</title>
+  <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <ul>
-    <li>Todo</li>
-    <li>Todo</li>
-    <li>Todo</li>
-  </ul>
-
+  <div id="btn">?</div>
   <script src="js/main.js"></script>
 </body>
 </html>
