--- a/index.html
+++ b/index.html
@@ -2,11 +2,18 @@
 <html lang="ja">
 <head>
   <meta charset="utf-8">
-  <title>おみくじ</title>
+  <title>Stopwatch</title>
   <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-  <div id="btn">?</div>
-  <script src="js/main.js"></script>
+  <div class="container">
+    <div id="timer">00:00.000</div>
+    <div class="controls">
+      <div class="btn" id="start">Start</div>
+      <div class="btn" id="stop">Stop</div>
+      <div class="btn" id="reset">Reset</div>
+    </div>
+    <script src="js/main.js"></script>
+  </div>
 </body>
 </html>
